feat: Brand controller